# E4-projet-gant

./: .gitignore  E4FI.uproject  README.md  schema.graphml  unnamed0.graphml  unnamed1.graphml
.kdev4/: E4FI.kdev4  Includes.txt
3DWMUnreal/: CMakeLists.txt  E4FI.pro  E4FI.uproject  E4FI.workspace  E4FICodeCompletionFolders.txt  E4FICodeLitePreProcessor.txt  E4FIConfig.pri  E4FIHeader.pri  E4FIIncludes.pri  E4FISource.pri  Makefile
3DWMUnreal/Config/: DefaultInput.ini
3DWMUnreal/Content/StarterContent/Architecture/: Floor_400x400.uasset
3DWMUnreal/Content/StarterContent/Maps/: Minimal_Default.umap  Minimal_Default_BuiltData.uasset
3DWMUnreal/Content/StarterContent/Materials/: M_Water_Ocean.uasset  VideoMaterial.uasset
3DWMUnreal/Plugins/Runtime/Substance/: Substance.uplugin
3DWMUnreal/Source/: E4FIEditor.Target.cs
3DWMUnreal/Source/E4FI/: E4FI.Build.cs  MyScreen.cpp  ProcessPickup.cpp
3d/GloveProoject/: GloveProoject.CSharp.Editor.csproj  GloveProoject.CSharp.Plugins.csproj  GloveProoject.CSharp.csproj  GloveProoject.sln  GloveProoject.userprefs
3d/GloveProoject/Assets/: accelerometerControl.cs  cameraController.cs  globalController.cs  gyroscopeControl.cs  main.unity  networkController.cs  potardController.cs  t.mat
Config/: DefaultEngine.ini  DefaultGame.ini
Content/: BMyScreen.uasset  MyMyScreen.uasset
Content/StarterContent/Blueprints/: BP_LightStudio.uasset
Content/StarterContent/Maps/: Minimal_Default.umap  Minimal_Default_BuiltData.uasset  StarterMap.umap
MyProject4/: CMakeLists.txt  MyProject4.kdev4  MyProject4.pro  MyProject4.uproject  MyProject4.workspace  MyProject4CodeCompletionFolders.txt  MyProject4CodeLitePreProcessor.txt  MyProject4Config.pri  MyProject4Defines.pri  MyProject4Header.pri  MyProject4Includes.pri  MyProject4Source.pri
MyProject4/.kdev4/: Defines.txt  Includes.txt  MyProject4.kdev4
MyProject4/Binaries/Linux/: MyProject4Editor.target  UE4Editorx86_64-unknown-linux-gnu.modules
MyProject4/Config/: DefaultEngine.ini  DefaultGame.ini
MyProject4/Content/StarterContent/Maps/: Minimal_Default.umap  Minimal_Default_BuiltData.uasset
MyProject4/Content/StarterContent/Props/: SM_CornerFrame.uasset
MyProject4/Saved/Config/Linux/: EditorPerProjectUserSettings.ini
MyProject4/Saved/Config/WorldState/: 3032109045.json
MyProject4/Saved/Crashes/crashinfo-MyProject4-pid-837-1B861AB02F050B0200130267303AE918/: Diagnostics.txt  wermeta.xml
MyProject4/Source/: MyProject4.Target.cs  MyProject4Editor.Target.cs
MyProject4/Source/MyProject4/: MyProject4.Build.cs  MyProject4.cpp  MyProject4GameModeBase.cpp  MyProject4GameModeBase.h
Source/E4FI/: MyScreen.cpp  MyScreen.h
arduino/: CMakeLists.txt  Gant.elf  Gant.hex  cmake_install.cmake  sketch_sep04a.ino
arduino/C++/: a  loadENV.sh  test.ino
arduino/gant/: README
arduino/libraries/MPU6050/: MPU6050.h
arduino/src/: main.cpp  pnew.cpp
arduino/src/Compo/: Action.cpp  Action.hpp  BaseAction.cpp  BaseAction.hpp  BaseCompo.cpp  BaseCompo.hpp  HelpCompo.cpp  HelpCompo.hpp
arduino/src/Compo/acelero/: Ace_getAction.cpp  Ace_getAction.hpp  AceleroAction.cpp  AceleroAction.hpp  AceleroCompo.cpp  AceleroCompo.hpp
arduino/src/Compo/help/: HelpAction.cpp  HelpAction.hpp  HelpCompo.cpp  HelpCompo.hpp
arduino/src/Compo/pin/: PinAction.cpp  PinAction.hpp  PinCompo.cpp  PinCompo.hpp  PinInitAction.cpp  PinInitAction.hpp  PinReadAction.cpp  PinReadAction.hpp  PinWriteAction.cpp  PinWriteAction.hpp
arduino/test/: .#compo.cpp  test.ino
gant/: CMakeLists.txt  Gant.elf
gant/arduino/: Gant.hex
gant/arduino/src/: Ace.cpp  Ace.hpp  Comp.hpp  main.cpp  nice.inc
gant/src/: Comp.cpp  Flex.cpp  Flex.hpp
gant/test/: compo.cpp
launcher/: CMakeLists.txt
launcher/src/: Application.cpp  Application.hpp  Launcher.cpp  Launcher.hpp  testlauncher.cpp
server_X/: CMakeCache.txt  CMakeLists.txt  CMakeLists2.txt  Makefile  cmake_install.cmake  script.py  start.sh  stop.sh  uml.txt
server_X/src/: App.cpp  App.hpp  Display.cpp  Display.hpp  Event.cpp  Event.hpp  Geometry.cpp  Geometry.hpp  Launcher.cpp  Launcher.hpp  Window.cpp  Window.hpp  test.cpp  testDisplay.cpp  testEvent.cpp  testGeometry.cpp
server_X/src/X/: XApp.cpp  XApp.hpp  XDisplay.cpp  XDisplay.hpp  XEvent.cpp  XEvent.hpp  XGeometry.cpp  XGeometry.hpp  XWindow.cpp  XWindow.hpp
troisdhetWMUnreal/: CMakeLists.txt  E4FI.kdev4  E4FI.pro  E4FI.uproject  E4FI.workspace  E4FICodeCompletionFolders.txt  E4FIDefines.pri  E4FIIncludes.pri  E4FISource.pri
troisdhetWMUnreal 4.15/: CMakeLists.txt  E4FI.pro  E4FI.uproject  E4FI.workspace  E4FICodeCompletionFolders.txt  E4FIHeader.pri  E4FIIncludes.pri
troisdhetWMUnreal 4.15/.kdev4/: E4FI.kdev4  Includes.txt
troisdhetWMUnreal 4.15/Binaries/Linux/: E4FIEditor.target  UE4Editorx86_64-unknown-linux-gnu.modules
troisdhetWMUnreal 4.15/Config/: DefaultGame.ini
troisdhetWMUnreal 4.15/Content/: BMyScreen.uasset  MyMyScreen.uasset
troisdhetWMUnreal 4.15/Content/StarterContent/Blueprints/: Blueprint_Effect_Smoke.uasset
troisdhetWMUnreal 4.15/Content/StarterContent/Maps/: Minimal_Default.umap
troisdhetWMUnreal 4.15/Content/StarterContent/Materials/: M_Water_Lake.uasset
troisdhetWMUnreal 4.15/Saved/Config/Linux/: EditorPerProjectUserSettings.ini
troisdhetWMUnreal 4.15/Source/: E4FI.Target.cs
troisdhetWMUnreal 4.15/Source/E4FI/: MyScreen.cpp  ScreenManager.cpp
troisdhetWMUnreal/.kdev4/: Defines.txt  E4FI.kdev4  Includes.txt
troisdhetWMUnreal/Config/: DefaultEngine.ini
troisdhetWMUnreal/Content/: MyScreenManagerBP.uasset  caca.uasset
troisdhetWMUnreal/Content/Assets/: PP_OutlineColored.uasset  PP_OutlineCustomDepthOcclusion.uasset  TestPostProcess.uasset
troisdhetWMUnreal/Content/StarterContent/Blueprints/: Blueprint_CeilingLight.uasset  Blueprint_Effect_Explosion.uasset  Blueprint_Effect_Fire.uasset  Blueprint_Effect_Sparks.uasset  Blueprint_Effect_Steam.uasset  Blueprint_WallSconce.uasset
troisdhetWMUnreal/Content/StarterContent/Maps/: Minimal_Default_BuiltData.uasset
troisdhetWMUnreal/Source/E4FI/: E4FI.cpp  ProcessPickup.h  ScreenManager.h
(+71 files in other folders)
